modified css to have query status display first and fixed spacing for uniformity

--- a/Labs/04-cap/src/App.css
+++ b/Labs/04-cap/src/App.css
@@ -68,7 +68,21 @@ input {
   transform: translateY(4px);
 }
 
-.container {
+.currentScreenshot {
+  margin-top: 5%;
+}
+
+.queryStatusContainer {
+  margin-top: 5%;
+  padding: 15px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  margin-left: 5%;
+  margin-right: 5%;
+  border-radius: 8px;
+  background-color: #cadcf2;
+}
+
+.prevScreenshotContainer {
   padding: 15px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   margin-left: 5%;
