--- a/Labs/04-cap/src/index.css
+++ b/Labs/04-cap/src/index.css
@@ -1,5 +1,6 @@
 :root {  
   /* background-image:url('assets/windows_background.png'); */
+  background-image: url('https://symphonious-piroshki-28238c.netlify.app/assets/windows_background.7af0efb2.png');
   background-size: 35%;
   background-blend-mode: multiply;
 }
